<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#F3F2E8"
    android:fitsSystemWindows="true">


<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="15dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:focusableInTouchMode="true">



    <ImageView android:src="@drawable/avatar"
        android:id="@+id/picture"
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:layout_marginBottom="24dp"
        android:layout_gravity="center"
        android:background="@drawable/dugme"
        android:scaleType="fitXY" />
    <!-- Email Label -->


    <!--<android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">-->
        <EditText android:id="@+id/input_username_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions"
            android:textStyle="italic"
            android:hint="@string/Username" />
    <!--</android.support.design.widget.TextInputLayout>-->

    <!-- Password Label -->
    <!--<android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="0dp">-->
        <EditText android:id="@+id/input_password_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textStyle="italic"
            android:hint="@string/Password"/>
    <!--</android.support.design.widget.TextInputLayout>-->

    <!--<android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">-->
        <EditText android:id="@+id/input_password_confirm_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textStyle="italic"
            android:hint="@string/ConfirmPassword" />
    <!--</android.support.design.widget.TextInputLayout>-->

    <!-- Password Label -->
    <!--<android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="0dp">-->
        <EditText android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textStyle="italic"
            android:hint="@string/Email"/>
    <!--</android.support.design.widget.TextInputLayout>-->

    <!--<android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">-->
        <EditText android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textStyle="italic"
            android:hint="@string/Name" />
    <!--</android.support.design.widget.TextInputLayout>-->

    <!--<android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="0dp">-->
        <EditText android:id="@+id/input_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textStyle="italic"
            android:hint="@string/Lastname"/>
    <!--</android.support.design.widget.TextInputLayout>-->

    <!--<android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">-->
        <EditText android:id="@+id/input_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:textStyle="italic"
            android:hint="@string/Phone" />
    <!--</android.support.design.widget.TextInputLayout>-->







    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:padding="12dp"
        android:layout_gravity="center"
        android:background="@drawable/dugme"
        android:shadowDx="0"
        android:shadowDy="5"
        android:text="SIGN UP"/>


</LinearLayout>

</ScrollView>