<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#F3F2E8"
        android:fitsSystemWindows="true"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="15dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/pictureProfile"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="left"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/dugme"
                    android:scaleType="fitXY"
                    android:src="@drawable/avatar" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/usernameProfile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="50dp"
                        android:baselineAligned="false"
                        android:text="@string/Username"
                        android:textSize="22dp"
                        android:textStyle="italic" />

                    <Button
                        android:id="@+id/prijateljiProfile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Prijatelji"
                        android:textSize="22dp"
                        android:textStyle="italic" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/imeProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:text="@string/Ime"
                android:textSize="22dp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/prezimeProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:text="@string/Prezime"
                android:textSize="22dp"
                android:textStyle="italic" />


            <TextView
                android:id="@+id/telefonProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:text="@string/Telefon"
                android:textSize="22dp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/poeniProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:text="@string/Poeni"
                android:textSize="22dp"
                android:textStyle="italic" />


            <Button
                android:id="@+id/DugmeRangLista"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="60dp"
                android:text="Rang lista" />
            <!--<android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/dugme"
                android:padding="12dp"
                android:shadowDx="0"
                android:shadowDy="5"
                android:text="SIGN UP" />-->


        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="8dp"
        android:background="#390B0B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/navigation"
        android:id="@+id/bar">

    </android.support.design.widget.BottomNavigationView>

</android.support.constraint.ConstraintLayout>